--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,9 +17,15 @@
 ##                                                                                                                    ##
 ##====================================================================================================================##
 
+# Use the package PkgConfig to detect GTK+ headers/library files
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
+
 add_executable(froggy froggy.cpp)
-target_include_directories( froggy PRIVATE $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}> $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>)
-target_link_libraries(froggy ${CONAN_LIBS})
+target_include_directories( froggy PRIVATE $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}> $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include> ${GTK3_INCLUDE_DIRS})
+target_link_libraries(froggy ${CONAN_LIBS} ${GTK3_LIBRARIES})
+#target_link_directories(froggy PRIVATE ${GTK3_LIBRARY_DIRS})
+#target_compile_definitions(froggy PRIVATE ${GTK3_CFLAGS_OTHER})
 
 set_property(TARGET froggy PROPERTY CXX_STANDARD 17)
 target_compile_features(froggy PUBLIC cxx_std_17)
