moon shot with return

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,15 +17,19 @@
 ##                                                                                                                    ##
 ##====================================================================================================================##
 
-# Use the package PkgConfig to detect GTK+ headers/library files
-find_package(PkgConfig REQUIRED)
-pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
+option( USE_GTK "Show a GTK window." OFF )
+
+if (USE_GTK)
+    # Use the package PkgConfig to detect GTK+ headers/library files
+    find_package(PkgConfig REQUIRED)
+    pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
+    set( EXTRA_FLAGS "-DUSE_GTK" )
+endif()
 
 add_executable(froggy froggy.cpp)
 target_include_directories( froggy PRIVATE $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}> $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include> ${GTK3_INCLUDE_DIRS})
 target_link_libraries(froggy ${CONAN_LIBS} ${GTK3_LIBRARIES})
-#target_link_directories(froggy PRIVATE ${GTK3_LIBRARY_DIRS})
-#target_compile_definitions(froggy PRIVATE ${GTK3_CFLAGS_OTHER})
+target_compile_definitions(froggy PRIVATE ${EXTRA_FLAGS})
 
 set_property(TARGET froggy PROPERTY CXX_STANDARD 17)
 target_compile_features(froggy PUBLIC cxx_std_17)
